# PromptGuard

./: .gitignore  README.md  makefile  pyproject.toml  run_experiments.py  subtask_1A_xlm_roberta_recovery_example.ipynb  subtask_1B_xlm_robertaa_recovery.ipynb  subtask_1a_xlm_roberta_qwen_label3.ipynb  subtask_1a_xlm_roberta_qwen_label4.ipynb  subtask_1a_xlm_roberta_recovery_example.ipynb  test.sh
analysis/: label_to_word_relation.py
data/: 1a_dev_balanced.csv  1a_dev_test_labeled.csv  1a_dev_test_labeled_balanced.csv  1a_test.tsv  1a_test_labeled.tsv  explore.ipynb  few_shot_results_5_2.csv  few_shot_submission_5_4.csv
data/dev/: 2_7_Qwen_Qwen3-30B-A3B-Thinking-2507.csv
notebooks/: subtask_1B_xlm_robertaa_recovery.ipynb  subtask_1a_xlm_roberta_qwen_label4.ipynb  subtask_1a_xlm_roberta_recovery_example.ipynb
output/: few_shot_results_5_1.csv  few_shot_results_5_3.csv  few_shot_results_5_4.csv  few_shot_results_5_5.csv  few_shot_results_5_6.csv  few_shot_results_5_7.csv  few_shot_submission_5_7_30b.csv
output/dev/classic/: 10_7_Qwen_QwQ-32B.csv  10_7_Qwen_QwQ-32B.json  10_7_Qwen_Qwen3-30B-A3B-Thinking-2507.csv  10_7_Qwen_Qwen3-30B-A3B-Thinking-2507.json  10_7_Qwen_Qwen3-32B.csv  10_7_Qwen_Qwen3-32B.json  16_7_Qwen_QwQ-32B.csv  16_7_Qwen_QwQ-32B.json  16_7_Qwen_Qwen3-30B-A3B-Thinking-2507.csv  16_7_Qwen_Qwen3-30B-A3B-Thinking-2507.json  16_7_Qwen_Qwen3-32B.csv  16_7_Qwen_Qwen3-32B.json  3_7_Qwen_QwQ-32B.csv  3_7_Qwen_QwQ-32B.json  (+10 more)
output/test/: 3_7_openai_gpt-oss-20b.csv  7_7_openai_gpt-oss-20b.csv
src/: classify_prompt.py  few_shot.py  onlinevllm.py
(+88 files in other folders)
