[project]
name = "hate-speech-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.8.3",
    "flashinfer-python>=0.3.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "retry>=0.9.2",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "triton>=3.3.1",
    "vllm>=0.10.1.1",
    "wandb>=0.21.3",
]
